fix: center item text and make it wrap

--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -29,6 +29,10 @@ img {
   align-items: center;
 }
 
+.text {
+  text-align: center;
+}
+
 /* do not edit this footer */
 .footer {
   position: fixed;
